# weather-app

./: README.md  app.json  package-lock.json  package.json
app/: +not-found.tsx  _layout.tsx  weather-details.tsx
app/(tabs)/: _layout.tsx  chat.tsx  index.tsx  search.tsx
assets/: weather_images.tsx  weather_images_day.tsx  weather_images_night.tsx
backend/: api_functions.py  main.py  pyproject.toml  weather_codes.py
backend/agent/: agent.py  tools.py
backend/utils/: google_maps_api.py
components/: chatBubble.tsx  mainWeatherBox.tsx  smallWeatherBox.tsx  weatherDetailsSmallWeatherBox.tsx
context/: ConversationContext.tsx  LocationContext.tsx  WeatherContext.tsx
