[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["gbanys"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
jupyter = "^1.1.1"
notebook = "^7.3.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
langchain-core = "^0.3.29"
langchain-openai = "^0.2.14"
langchain = "^0.3.14"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
